--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -15,6 +15,7 @@
         padding: 8px 16px;
         border-bottom: solid 1px rgb(212 212 212);
         border-radius: 8px 8px 0 0;
+        font-size: 14px;
 
         select {
             cursor: pointer;
@@ -22,6 +23,7 @@
             border-radius: 4px;
             padding: 4px 6px;
             border: solid 1px rgb(212 212 212);
+            background: white;
         }
 
         ul, ol {
@@ -36,12 +38,26 @@
             align-items: center;
             margin: 0;
             li {
+                display: flex;
+                align-items: center;
                 cursor: pointer;
-                padding: 4px 8px;
+                padding: 8px;
                 border-radius: 8px;
                 border: solid 1px transparent;
+                height: 16px;
+                svg {
+                    width: 16px !important;
+                }
                 &:hover {
                     background-color: rgb(245 245 245);
+                }
+
+                .popover-container {
+                    span {
+                        svg {
+                            width: 8px !important;
+                        }
+                    }
                 }
             }
 
@@ -51,8 +67,9 @@
                 border-bottom: unset;
                 border-radius: unset;
                 border-left: solid 1px rgb(212 212 212);
+                width: 0;
                 height: 30px;
-                padding: 0 8px 0 0;
+                padding: 0;
             }
 
             .is-active {
@@ -110,15 +127,20 @@
         /* Image */
         .editor-image {
             .editor-image--popover {
-                padding: 12px;
+                padding: 6px;
                 background-color: white;
                 border-radius: 8px;
                 border: solid 1px rgb(212 212 212);
                 top: 28px;
                 width: max-content;
                 z-index: 10;
-                .image-item span {
-                    margin-left: 8px;
+                min-width: 150px;
+                li.image-item {
+                    width: auto;
+                    span {
+                        margin-left: 8px;
+                        white-space: nowrap;
+                    }
                 }
             }
         }
@@ -257,6 +279,92 @@
                     color: inherit;
                     font-size: 0.8rem;
                     padding: 0;
+                }
+            }
+        }
+    }
+
+    /** IMAGE MODAL **/
+    .insert-image {
+        .insert-image--modal-head {
+            display: flex;
+            flex-direction: column;
+            padding: 12px 8px;
+            .insert-image--modal-head-title {
+                display: flex;
+                gap: 16px;
+                justify-content: space-between;
+                svg {
+                    font-size: 20px;
+                    cursor: pointer;
+                }
+            }
+        }
+
+        .insert-image--modal-content {
+            ul {
+                display: flex;
+
+                li.image-item {
+                    border-radius: 0;
+                    &.active {
+                        border-bottom: solid 1px rgb(59 130 246);
+                    }
+                    &:hover {
+                        background-color: unset;
+                    }
+                    &:hover:not(.active) {
+                        border-bottom: solid 1px rgb(229 229 229);
+                    }
+                }
+            }
+
+            .insert-image--import-file {
+                .insert-image--import-file-dz {
+                    height: 150px;
+                    border: 1px dashed #A4A4A4;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 8px;
+                    margin-top: 12px;
+                    padding: 12px;
+                    cursor: pointer;
+                    div {
+                        display: flex;
+                        gap: 12px;
+                    }
+                }
+            }
+
+            .insert-image--from-url {
+                padding: 12px;
+                display: flex;
+                flex-direction: column;
+                label {
+                    margin-bottom: 6px;
+                }
+                input {
+                    border-radius: 4px;
+                    border: solid 1px rgb(212 212 212);
+                    padding: 6px 8px;
+                }
+                .insert-image--from-url-button {
+                    margin-top: 12px;
+                    display: flex;
+                    justify-content: flex-end;
+                    button {
+                        cursor: pointer;
+                        padding: 10px 24px;
+                        border-radius: 8px;
+                        background-color: #008A35;
+                        color: white;
+                        border: unset;
+                        &:hover {
+                            background-color: #007f31;
+                        }
+                    }
                 }
             }
         }
