--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -44,9 +44,9 @@
                 padding: 8px;
                 border-radius: 8px;
                 border: solid 1px transparent;
-                height: 16px;
+                min-height: 16px;
                 svg {
-                    width: 16px !important;
+                    min-width: 16px !important;
                 }
                 &:hover {
                     background-color: rgb(245 245 245);
@@ -132,7 +132,7 @@
                 border-radius: 8px;
                 border: solid 1px rgb(212 212 212);
                 top: 28px;
-                width: max-content;
+                width: 100%;
                 z-index: 10;
                 min-width: 150px;
                 li.image-item {
