--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -56,6 +56,7 @@
                     span {
                         svg {
                             width: 8px !important;
+                            min-width: unset !important;
                         }
                     }
                 }
