--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -10,6 +10,10 @@
         outline: unset !important;
     }
 
+    .material-symbols-outlined {
+        font-size: 20px;
+    }
+
     /** TOOLBAR **/
     .editor-toolbar {
         padding: 8px 16px;
