--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -602,6 +602,70 @@
             }
         }
     }
+
+    /** PANEL **/
+    .info-panel {
+        padding: 10px;
+        background: #ebeefa;
+        border-radius: 4px;
+        margin: 10px 0;
+        position: relative;
+
+        .info-panel__content {
+            p {
+                margin-bottom: 0;
+                line-height: 1.25rem;
+            }
+        }
+
+        .info-panel__actions {
+            position: absolute;
+            display: flex;
+            top: -40px;
+            right: 5px;
+            padding: 8px;
+            background: white;
+            border-radius: 4px;
+            box-shadow: rgba(30, 31, 33, 0.15) 0 8px 12px 0, rgba(30, 31, 33, 0.31) 0 0 1px 0;
+            gap: 6px;
+            
+            .material-symbols-outlined {
+                cursor: pointer;
+            }
+
+            .info-panel__icon--active {
+                background-color: #e9f2fe;
+                color: #1868db;
+            }
+        }
+
+        .info-panel__select {
+            background: white;
+            font-size: 14px;
+            border: solid 1px gray;
+            border-radius: 4px;
+            padding: 4px 8px;
+            cursor: pointer;
+        }
+
+        &.info-panel--warning {
+            background: #fff6de;
+        }
+
+        &.info-panel--error {
+            background: #fae9e9;
+        }
+    }
+
+    .info-panel--block {
+        display: flex;
+        align-items: start;
+        gap: 0.75rem;
+
+        .material-symbols-outlined {
+            font-size: 20px;
+        }
+    }
 }
 
 /** TIPPY for BubbleMenu **/
